--- a/templates/elements/searchbar.html.twig
+++ b/templates/elements/searchbar.html.twig
@@ -1,9 +1,3 @@
-<div class="form-inline my-2">
-        {{ form_start(formSearch) }}
-            
-        {{ form_widget{formSearch.cherche, {'attr': {'placeholder': 'Entrez IMO or MMSI'}}} }}
-        {{ form_widget{formSearch.envoiimo, {'label': 'Cherche IMO' }} }}
-        {{ form_widget{formSearch.envoimmsi, {'label': 'Cherche MMSI' }} }}
-        
-        {{ form_end{formSearch} }}
-</div>
+<input class="form-control me-sm-2" type="text" placeholder="Search"> &nbsp;
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Cherche IMO</button> &nbsp;
+    <button class="btn btn-secondary my-2 my-sm-0" type="submit">Cherche MMSI</button> &nbsp;
