--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}BATEAUX{% endblock %}</title>
         <link rel="stylesheet" href="{{ asset('css/bootstrap.css') }}" />
         <script src="{{ asset('js/bootstrap.js') }}"></script>
     </head>
